feat: Implement text rendering

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.21)
-include(ExternalProject)
+include(FetchContent)
 
 project("HWLMonitor" C ASM)
 
@@ -21,7 +21,6 @@ add_compile_options(
     -Wundef
     -Wfatal-errors
     --param=min-pagesize=0
-    -nostdlib
     -mthumb
     -ffunction-sections
     -fdata-sections
@@ -43,6 +42,7 @@ add_executable(
     src/i2c.c
     src/sh1106.c
     src/drawing_task.c
+    src/primitive_drawing.c
     submodules/stm32f0xx-hal-driver/Src/stm32f0xx_ll_i2c.c
     submodules/stm32f0xx-hal-driver/Src/stm32f0xx_ll_gpio.c
 )
@@ -50,6 +50,7 @@ add_executable(
 target_include_directories(
     hwlmonitor PUBLIC
     include/
+    ${CMAKE_CURRENT_BINARY_DIR} # Needed for generated header(s).
     submodules/CMSIS_6/CMSIS/Core/Include
     submodules/cmsis-device-f0/Include
     submodules/stm32f0xx-hal-driver/Inc
@@ -59,6 +60,7 @@ target_include_directories(
 
 set_property(TARGET hwlmonitor PROPERTY C_STANDARD 23)
 
+# Compile and link FreeRTOS.
 set(FREERTOS_PORT GCC_ARM_CM0)
 set(FREERTOS_HEAP 1)
 add_library(freertos_config INTERFACE)
@@ -70,8 +72,26 @@ target_link_libraries(
     freertos_kernel
 )
 
-set_target_properties(hwlmonitor PROPERTIES OUTPUT_NAME hwlmonitor.elf)
+# Download, extract and process a font.
+set(FONT_TTF "${FETCHCONTENT_BASE_DIR}/font-src/ttf - Mx \\(mixed outline+bitmap\\)/Mx437_IBM_VGA_9x16.ttf")
+set(FONT_H "${CMAKE_CURRENT_BINARY_DIR}/font.h")
+FetchContent_Declare(
+    font
+    URL https://int10h.org/oldschool-pc-fonts/download/oldschool_pc_font_pack_v2.2_linux.zip
+    URL_HASH MD5=e4e114151d7d9d4baf7b0f69b6645043
+    DOWNLOAD_EXTRACT_TIMESTAMP true
+)
+FetchContent_MakeAvailable(
+    font
+)
+add_custom_command(
+    OUTPUT ${FONT_H}
+    COMMAND python ${PROJECT_SOURCE_DIR}/scripts/ttf-to-header.py -i ${FONT_TTF} -o ${FONT_H}
+)
+add_custom_target(generate_font_h DEPENDS ${FONT_H})
+add_dependencies(hwlmonitor generate_font_h)
 
+set_target_properties(hwlmonitor PROPERTIES OUTPUT_NAME hwlmonitor.elf)
 add_custom_target(
     upload
     COMMAND arm-none-eabi-objcopy -O binary hwlmonitor.elf firmware.bin
