--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -22,7 +22,7 @@ jobs:
     - run: arm-none-eabi-gcc --version
 
     - name: Install python dependencies
-    - run: |
+      run: |
         python -m pip install --upgrade pip
         pip install pillow
 
